2. linear 함수 구현 - 변수 c>> b로 변경. 편의를 위하여

--- a/assignment03.ipynb
+++ b/assignment03.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONV6LXldH77+T0ZC1u1Lm9",
+      "authorship_tag": "ABX9TyP3o2VsKjTMiglgbclhjQN3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
       "source": [
         "# Building the model\n",
         "m = 0\n",
-        "c = 0\n",
+        "b = 0\n",
         "\n",
         "L = 0.001  # The learning Rate\n",
         "epochs = 10000  # The number of iterations to perform gradient descent\n",
@@ -115,13 +115,13 @@
         "\n",
         "# Performing Gradient Descent \n",
         "for i in range(epochs): \n",
-        "    Y_pred = m * x_data + c  # The current predicted value of Y\n",
+        "    Y_pred = m * x_data + b  # The current predicted value of Y\n",
         "    D_m = (-2/n) * sum(x_data * (y_data - Y_pred))  #  m 변화값\n",
         "    D_c = (-2/n) * sum(y_data - Y_pred)  # c 변화값\n",
         "    m = m - L * D_m  # m 업데이트\n",
-        "    c = c - L * D_c  #  c 업데이트\n",
+        "    b = b - L * D_b  #  c 업데이트\n",
         "    \n",
-        "print (m, c)"
+        "print (m, b)"
       ],
       "execution_count": 62,
       "outputs": [
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "9cecdcaa-8492-4a2a-bb29-ed9944c6d714"
+        "outputId": "6f615352-8380-46e5-e924-3499fc2b635b"
       },
       "source": [
         "# 예측함수 구현\n",
@@ -153,7 +153,7 @@
         "plt.plot([min(x_data), max(x_data)], [min(Y_pred), max(Y_pred)], color='r')  # 일차원 회귀함수\n",
         "plt.show()"
       ],
-      "execution_count": 63,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "display_data",
@@ -173,7 +173,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bBy-FjKTswVo",
+        "id": "qevqIPdQAVXz",
         "colab_type": "code",
         "colab": {}
       },
