--- a/Assignment07.ipynb
+++ b/Assignment07.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment07.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOf2sqLMxMRwrKomfcQgH6N",
+      "authorship_tag": "ABX9TyMHbFzcMpckr915IWzAVLAx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -472,13 +472,29 @@
       "metadata": {
         "id": "7x-8wtunuoes",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "c3c41474-84a8-4039-dee9-3b43bbe01f50"
       },
       "source": [
-        ""
+        "print ('lambda1 =','\\033[31m', lambda1,'\\033[0m' )\n",
+        "print ('lambda2 =','\\033[32m', lambda2,'\\033[0m' )\n",
+        "print ('lambda3 =','\\033[34m', lambda3,'\\033[0m' )"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "lambda1 = \u001b[31m 0.001 \u001b[0m\n",
+            "lambda2 = \u001b[32m 0.01 \u001b[0m\n",
+            "lambda3 = \u001b[34m 0.1 \u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
