function definition ( sigmoid, vector multiply, vector innersum)

--- a/Assignment08.ipynb
+++ b/Assignment08.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment08.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNNHmMDQw7m2U5SX2BRJUKL",
+      "authorship_tag": "ABX9TyNqtwOH64KZlcNgrcvKxX3/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 245
         },
-        "outputId": "cbcc4121-729b-4606-f5d3-8d55186921c8"
+        "outputId": "40704324-5c98-4b62-bdd8-5b79e8727176"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -103,9 +103,6 @@
         "    list_image[:, count]    = im_vector    \n",
         "\n",
         "    count += 1\n",
-        "\n",
-        "def vector_add( v, w ):\n",
-        "  return [ v_i + w_i for v_i, w_i in zip(v,w)]\n",
         "\n",
         "\n",
         "count0 = 0\n",
@@ -207,12 +204,12 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "784\n"
+            "[5, 20, 60]\n"
           ],
           "name": "stdout"
         },
@@ -235,6 +232,48 @@
       "cell_type": "code",
       "metadata": {
         "id": "kxXjwDvrxrNe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "import random\n",
+        "\n",
+        "temp_0 = 0\n",
+        "temp_1 = 0\n",
+        "temp_2 = 0\n",
+        "temp_3 = 0\n",
+        "temp_4 = 0\n",
+        "temp_5 = 0\n",
+        "temp_6 = 0\n",
+        "temp_7 = 0\n",
+        "temp_8 = 0\n",
+        "temp_9 = 0\n",
+        "\n",
+        "def sigmoid (input):  # input 은 float type\n",
+        "  return 1 / (1 + math.exp(-input))\n",
+        "\n",
+        "def vector_multi( v, w ):\n",
+        "  return [ v_i * w_i for v_i, w_i in zip(v,w)]\n",
+        "\n",
+        "def vector_innersum (vector):\n",
+        "  sum = 0\n",
+        "  for i in range(len(vector)):\n",
+        "    sum += vector[i]\n",
+        "  return sum\n",
+        "\n",
+        "list_theta = []\n",
+        "\n",
+        "for i in range(784):\n",
+        "  list_theta.append(random.randint(1,10))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UkW_LJ_wKV1T",
         "colab_type": "code",
         "colab": {}
       },
