NN computation per label

--- a/Assignment08.ipynb
+++ b/Assignment08.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment08.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqtwOH64KZlcNgrcvKxX3/",
+      "authorship_tag": "ABX9TyM2GGvE5UhSSoiDqkO243a3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,7 +265,42 @@
         "list_theta = []\n",
         "\n",
         "for i in range(784):\n",
-        "  list_theta.append(random.randint(1,10))\n"
+        "  list_theta.append(random.randint(1,10))\n",
+        "\n",
+        "for i in range(10000):\n",
+        "    label       = list_label[i]\n",
+        "    im_vector   = list_image[:, i] # 하나의 열당 784행 = 28*28(이미지 데이터 파일 크기)// 열 10000개 - 데이터갯수\n",
+        "    \n",
+        "    if(label == 0) :\n",
+        "      temp_0 = temp_0 +sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count0 = count0 + 1\n",
+        "    elif(label == 1) :\n",
+        "      temp_1 = temp_1 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
+        "      count1 = count1 + 1\n",
+        "    elif(label == 2) :\n",
+        "      temp_2 = temp_2 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
+        "      count2 = count2 + 1\n",
+        "    elif(label == 3) :\n",
+        "      temp_3 = temp_3 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count3 = count3 + 1\n",
+        "    elif(label == 4) :\n",
+        "      temp_4 = temp_4 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count4 = count4 + 1\n",
+        "    elif(label == 5) :\n",
+        "      temp_5 = temp_5 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count5 = count5 + 1\n",
+        "    elif(label == 6) :\n",
+        "      temp_6 = temp_6 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count6 = count6 + 1\n",
+        "    elif(label == 7) :\n",
+        "      temp_7 = temp_7 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count7 = count7 + 1\n",
+        "    elif(label == 8) :\n",
+        "      temp_8 = temp_8 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count8 = count8 + 1\n",
+        "    else :\n",
+        "      temp_9 = temp_9 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "      count9 = count9 + 1\n"
       ],
       "execution_count": 0,
       "outputs": []
