plot the number and average

--- a/Assignment08.ipynb
+++ b/Assignment08.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment08.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM2GGvE5UhSSoiDqkO243a3",
+      "authorship_tag": "ABX9TyNfsXj46wzUA9P/krWytSGj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,11 +60,7 @@
       "metadata": {
         "id": "B8c5PdAkxMpd",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "outputId": "40704324-5c98-4b62-bdd8-5b79e8727176"
+        "colab": {}
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -170,7 +166,6 @@
         "      vectorSum_9 = vector_add(vectorSum_9, im_vector)\n",
         "      count9 = count9 +1\n",
         "\n",
-        "\n",
         "#레이블별 데이터 벡터 평균값 구해서 matrix 생성 (하나당 784개)\n",
         "\n",
         "list_avg = np.empty((28 * 28, 10), dtype = float)\n",
@@ -204,15 +199,125 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[5, 20, 60]\n"
-          ],
-          "name": "stdout"
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kxXjwDvrxrNe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "import random\n",
+        "\n",
+        "temp_0 = 0.0\n",
+        "temp_1 = 0.0\n",
+        "temp_2 = 0.0\n",
+        "temp_3 = 0.0\n",
+        "temp_4 = 0.0\n",
+        "temp_5 = 0.0\n",
+        "temp_6 = 0.0\n",
+        "temp_7 = 0.0\n",
+        "temp_8 = 0.0\n",
+        "temp_9 = 0.0\n",
+        "\n",
+        "\n",
+        "def sigmoid (input):  # input 은 float type\n",
+        "  return 1 / (1 + math.exp(-input))\n",
+        "\n",
+        "def vector_multi( v, w ):\n",
+        "  return [ v_i * w_i for v_i, w_i in zip(v,w)]\n",
+        "\n",
+        "def vector_innersum (vector):\n",
+        "  sum = 0\n",
+        "  for i in range(len(vector)):\n",
+        "    sum += vector[i]\n",
+        "  return sum\n",
+        "\n",
+        "list_theta = []\n",
+        "for i in range(784):\n",
+        "  list_theta.append(np.random.randint(0,1))\n",
+        "\n",
+        "for i in range(10000):\n",
+        "    label       = list_label[i]\n",
+        "    im_vector   = list_image[:, i] # 하나의 열당 784행 = 28*28(이미지 데이터 파일 크기)// 열 10000개 - 데이터갯수\n",
+        "    \n",
+        "    if(label == 0) :\n",
+        "      temp_0 = temp_0 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "     \n",
+        "    elif(label == 1) :\n",
+        "      temp_1 = temp_1 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
+        "     \n",
+        "    elif(label == 2) :\n",
+        "      temp_2 = temp_2 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
+        "     \n",
+        "    elif(label == 3) :\n",
+        "      temp_3 = temp_3 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "    \n",
+        "    elif(label == 4) :\n",
+        "      temp_4 = temp_4 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "     \n",
+        "    elif(label == 5) :\n",
+        "      temp_5 = temp_5 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "   \n",
+        "    elif(label == 6 ) :\n",
+        "      temp_6 = temp_6 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "     \n",
+        "    elif(label == 7 ) :\n",
+        "      temp_7 = temp_7 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "    \n",
+        "    elif(label == 8) :\n",
+        "      temp_8 = temp_8 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "    \n",
+        "    else :\n",
+        "      temp_9 = temp_9 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
+        "  \n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bwCYyAftsFyw",
+        "colab_type": "text"
+      },
+      "source": [
+        "#1. Plot the average image"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sF6nqFlBsLa8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 227
         },
+        "outputId": "f9ad768b-685a-4275-8810-99f7ccc0a64e"
+      },
+      "source": [
+        "for i in range(10):\n",
+        "   label = number1_label[i]\n",
+        "   im_vector = list_avg[:,i]\n",
+        "   im_matrix = im_vector.reshape((28, 28))\n",
+        "\n",
+        "   plt.subplot( 2, 5, i+1 )\n",
+        "   plt.title(label)\n",
+        "   plt.imshow(im_matrix, cmap ='Greys', interpolation = 'None')\n",
+        "   frame   = plt.gca()\n",
+        "   frame.axes.get_xaxis().set_visible(False)\n",
+        "   frame.axes.get_yaxis().set_visible(False)\n",
+        "\n",
+        "plt.show()\n"
+      ],
+      "execution_count": 117,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
@@ -229,86 +334,62 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "kxXjwDvrxrNe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ikn4eq9TsT-E",
+        "colab_type": "text"
       },
       "source": [
-        "import math\n",
-        "import random\n",
-        "\n",
-        "temp_0 = 0\n",
-        "temp_1 = 0\n",
-        "temp_2 = 0\n",
-        "temp_3 = 0\n",
-        "temp_4 = 0\n",
-        "temp_5 = 0\n",
-        "temp_6 = 0\n",
-        "temp_7 = 0\n",
-        "temp_8 = 0\n",
-        "temp_9 = 0\n",
-        "\n",
-        "def sigmoid (input):  # input 은 float type\n",
-        "  return 1 / (1 + math.exp(-input))\n",
-        "\n",
-        "def vector_multi( v, w ):\n",
-        "  return [ v_i * w_i for v_i, w_i in zip(v,w)]\n",
-        "\n",
-        "def vector_innersum (vector):\n",
-        "  sum = 0\n",
-        "  for i in range(len(vector)):\n",
-        "    sum += vector[i]\n",
-        "  return sum\n",
-        "\n",
-        "list_theta = []\n",
-        "\n",
-        "for i in range(784):\n",
-        "  list_theta.append(random.randint(1,10))\n",
-        "\n",
-        "for i in range(10000):\n",
-        "    label       = list_label[i]\n",
-        "    im_vector   = list_image[:, i] # 하나의 열당 784행 = 28*28(이미지 데이터 파일 크기)// 열 10000개 - 데이터갯수\n",
-        "    \n",
-        "    if(label == 0) :\n",
-        "      temp_0 = temp_0 +sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count0 = count0 + 1\n",
-        "    elif(label == 1) :\n",
-        "      temp_1 = temp_1 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
-        "      count1 = count1 + 1\n",
-        "    elif(label == 2) :\n",
-        "      temp_2 = temp_2 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))   \n",
-        "      count2 = count2 + 1\n",
-        "    elif(label == 3) :\n",
-        "      temp_3 = temp_3 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count3 = count3 + 1\n",
-        "    elif(label == 4) :\n",
-        "      temp_4 = temp_4 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count4 = count4 + 1\n",
-        "    elif(label == 5) :\n",
-        "      temp_5 = temp_5 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count5 = count5 + 1\n",
-        "    elif(label == 6) :\n",
-        "      temp_6 = temp_6 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count6 = count6 + 1\n",
-        "    elif(label == 7) :\n",
-        "      temp_7 = temp_7 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count7 = count7 + 1\n",
-        "    elif(label == 8) :\n",
-        "      temp_8 = temp_8 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count8 = count8 + 1\n",
-        "    else :\n",
-        "      temp_9 = temp_9 + sigmoid(vector_innersum(vector_multi(list_theta, im_vector)))    \n",
-        "      count9 = count9 + 1\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "#2. Present the output of the neural network with random weights"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UkW_LJ_wKV1T",
+        "id": "NFtijXz2rbdc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "outputId": "af9677e1-bde1-4c68-feb9-94d3fcddfe46"
+      },
+      "source": [
+        "print( '0 : ' , temp_0/count0)\n",
+        "print ('1 : ' , temp_1/count1)\n",
+        "print ('2 : ' , temp_2/count2)\n",
+        "print ('3 : ' , temp_3/count3)\n",
+        "print ('4 : ' , temp_4/count4)\n",
+        "print ('5 : ' , temp_5/count5)\n",
+        "print ('6 : ' , temp_6/count6)\n",
+        "print ('7 : ' , temp_7/count7)\n",
+        "print ('8 : ' , temp_8/count8)\n",
+        "print ('9 : ' , temp_9/count9)"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 :  0.4117647058823529\n",
+            "1 :  0.5675\n",
+            "2 :  0.5483528161530287\n",
+            "3 :  0.5260416666666666\n",
+            "4 :  0.5965978128797084\n",
+            "5 :  0.4346978557504873\n",
+            "6 :  0.49027635619242577\n",
+            "7 :  0.5004868549172347\n",
+            "8 :  0.5115546218487395\n",
+            "9 :  0.5014910536779325\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SVnGJ6EcsmzD",
         "colab_type": "code",
         "colab": {}
       },
