parameter update modify

--- a/Assignment09.ipynb
+++ b/Assignment09.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment09.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPD+yHhQyJk1MetiSwKrnQC",
+      "authorship_tag": "ABX9TyNcPHRGBGCxlj1SQ4n/JJqK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -241,21 +241,18 @@
         "\n",
         "for i in range(trainingNum) :\n",
         "  l = list_label[i]\n",
-        "  #if (l == h[i]) : accuracy_training_cnt += 1>>>>>>>>>>>>>>살리기\n",
-        "  #accuracy_training_array.append(accuracy_training_cnt/trainingNum)>>>>>>>>>>>살리기\n",
+        "  if (l == h[i]) : accuracy_training_cnt += 1\n",
+        "  accuracy_training_array.append(accuracy_training_cnt/trainingNum)\n",
         "  for j in range(10):\n",
         "   cost = -l*math.log(im_vector_matrix_4_sig[j][i]+0.0000001) - (1-l)*math.log(1-im_vector_matrix_4_sig[j][i]+0.00000001)\n",
         "   costArray_training.append(cost)\n",
         "   \n",
-        "\n",
-        "        \n",
-        "# 정답과 가정사이에 발생한 오차1(=비용)*****************************\n",
-        "cost _ho += self.lr *_numpy.dot((cost * hypothesis * (1.0 - hypothesis)), numpy.transpose(hiddenOutputs))\n",
-        "                \n",
-        "        # 은닉계층 -> 출력계층의 전치와 오차1의 내적을 통해 오차2 계산\n",
-        "        hiddenErrors = numpy.dot(self.who.T, cost)        \n",
-        "        # (입력계층 -> 은닉계층) 가중치 업데이트\n",
-        "        self.wih += self.lr * numpy.dot((hiddenErrors * hiddenOutputs * (1.0 - hiddenOutputs)), numpy.transpose(inputs))\n",
+        "###modification need###       \n",
+        "#cost = targets - hy      \n",
+        "w_h2o += lr * numpy.dot((cost * h * (1.0 - h)), numpy.transpose(h))               \n",
+        "hiddenErrors = numpy.dot(w_h2o.T, cost)        \n",
+        "w_ih1 += lr * numpy.dot((hiddenErrors * hiddenOutputs * (1.0 - hiddenOutputs)), numpy.transpose(inputs))\n",
+        "    \n",
         "    \n",
         "\n",
         "# testing data load from google drive\n",
@@ -445,11 +442,8 @@
         "outputId": "f7b50fbd-10d4-49e0-92aa-19f29d716f59"
       },
       "source": [
-        "print(\"final_training_accuracy : \",.4117647058823529 )\n",
-        "print(\"final_testing_accuracy : \", 0.59659781287970840)\n",
-        "\n",
-        "#print (\"final_training_accuray :\" , accuracy_training_array[trainingNum-1] )\n",
-        "#print ( \"final_testing_accuray : \", accuracy_testing_array[tetingNum-1])"
+        "print (\"final_training_accuray :\" , accuracy_training_array[trainingNum-1] )\n",
+        "print ( \"final_testing_accuray : \", accuracy_testing_array[tetingNum-1])"
       ],
       "execution_count": 199,
       "outputs": [
@@ -461,6 +455,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AQhSsHwbvAQA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 4.Plot the classification example"
       ]
     },
     {
