implement of summation for Gradient Descent

--- a/Assignment10.ipynb
+++ b/Assignment10.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWTKg44pJPZoWvcrVsfFYO",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOFX8egApN8q4oujAqv2QE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,11 +123,7 @@
       "metadata": {
         "id": "HXmAzl_RfTHC",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
-        },
-        "outputId": "668d1b36-0dbe-41ba-a218-a5a4db25ad1e"
+        "colab": {}
       },
       "source": [
         "import math\n",
@@ -134,9 +131,7 @@
         "\n",
         "# 시그모이드 함수 \n",
         "def sigmoid(z):\n",
-        "  result = []\n",
-        "  for i in range(len(z)):\n",
-        "    result.append(1 / 1 + np.exp(-z[i]))\n",
+        "  result = 1 / (1 + np.exp(-z))\n",
         "  return result\n",
         "\n",
         "\n",
@@ -149,45 +144,160 @@
         "#print(u_matrix)  \n",
         "v_matrix = sigma * np.random.randn(10,197) + mu\n",
         "#print(v_matrix)\n",
+        "training_loss_List = []\n",
+        "testing_loss_List = []\n",
+        "\n",
+        "training_accuracy_List = []\n",
+        "testing_accuracy_List = []\n",
+        "\n",
+        "training_total_Num = 1000\n",
+        "testing_total_Num = 9000\n",
+        "\n",
+        "h_list = []\n",
+        "h_matrix = []\n",
+        "z_list = []\n",
+        "yhat_list = []\n",
+        "yhat_list2 = []\n",
+        "y_list = []\n",
+        "x_list = []\n",
         "\n",
         "\n",
         "\n",
-        "# testing data load from google drive\n",
-        "file_data   = \"/content/drive/My Drive/Colab Notebooks/mnist_2.csv\"\n",
-        "handle_file = open(file_data, \"r\")\n",
-        "data        = handle_file.readlines()\n",
-        "handle_file.close()\n",
+        "x_temp = 0\n",
+        "y_temp = 0\n",
+        "yhat_temp = 0\n",
+        "z_temp = 0\n",
+        "h_temp = 0\n",
         "\n",
-        "size_row    = 28    # height of the image\n",
-        "size_col    = 28    # width of the image\n",
+        " # iteration 하나당 데이터 하나 로드\n",
+        "for j in range(1000):\n",
+        "  x_temp = 0\n",
+        "  y_temp = 0\n",
+        "  yhat_temp = 0\n",
+        "  z_temp = 0\n",
+        "  h_temp = 0\n",
+        "  h_list.clear()\n",
+        "  z_list.clear()\n",
+        "  yhat_list.clear()\n",
+        "  y_list.clear()\n",
+        "  x_list.clear()\n",
+        "  \n",
+        "  # x_list 채우기 ( 785 x 1 )\n",
+        "  x_list.append(1) # bias 1로 채움 \n",
+        "  for i in range(784):\n",
+        "    x_temp = list_x[i][j]\n",
+        "    x_list.append(x_temp)\n",
+        "  \n",
+        "  # y_list 채우기 = u_matrix * x_list  ( 196  x 1 ) + yhat_list 채우기\n",
+        "  for i in range(196):\n",
+        "    y_temp = 0\n",
+        "    for k in range(785):\n",
+        "      y_temp += u_matrix[i][k] * x_list[k]\n",
+        "    y_list.append(y_temp)\n",
+        "  \n",
+        "  # yhat_list 채우기 ( 197 x 1 )\n",
+        "  yhat_list.append(1) # bias 추가하기\n",
+        "  for i in range(196):\n",
+        "    yhat_temp = sigmoid(y_list[i])\n",
+        "    yhat_list.append(yhat_temp)\n",
+        "    yhat_list2.append(yhat_temp)\n",
         "\n",
-        "num_image   = len(data)\n",
-        "count       = 0     # count for the number of images\n",
+        "  #z_list 채우기 (10 x 1)\n",
+        "  for i in range(10):\n",
+        "    z_temp = 0\n",
+        "    for k in range(197):\n",
+        "      z_temp+= v_matrix[i][k] * yhat_list[k]\n",
+        "    z_list.append(z_temp)\n",
         "\n",
+        "  #h_list  채우기( 10 x 1 )\n",
+        "  for i in range(10):\n",
+        "    h_temp = sigmoid(z_list[i])\n",
+        "    h_list.append(h_temp)\n",
+        "  h_matrix.append(h_list)\n",
         "\n",
+        "  \n",
+        " \n",
         "\n"
       ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[-0.45576133 -0.70442541 -0.1328267  ...  0.05239524 -0.07122353\n",
-            "  -0.37943546]\n",
-            " [ 0.34346537  0.22090962 -0.10305092 ... -0.0441263  -0.04144578\n",
-            "  -0.0695826 ]\n",
-            " [-0.41136115 -0.62277396  0.88876762 ... -0.70995425  0.83435811\n",
-            "  -0.66950693]\n",
-            " ...\n",
-            " [ 0.56311887  0.1741033  -0.78483651 ... -0.07653997  0.98282046\n",
-            "   0.94416576]\n",
-            " [-0.35169215 -0.64259807 -0.24554052 ...  0.84881077 -0.38541967\n",
-            "   0.22394234]\n",
-            " [ 0.86489919  0.27160781 -0.93828984 ... -0.4669331   0.08271971\n",
-            "   0.16977526]]\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i6fWfV9A6LIG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# NN ,Back propagation >> gradient descent / update parameter / \n",
+        "# Objective function 정의  = Loss function  & 위에서의 각 iteration에서의 h를 이용해 testing_loss_List 채우기\n",
+        "\n",
+        "LR = 0.1\n",
+        "\n",
+        "sum_for_v0x = 0\n",
+        "sum_for_v1x = 0\n",
+        "sum_for_v2x = 0\n",
+        "sum_for_v3x = 0\n",
+        "sum_for_v4x = 0\n",
+        "sum_for_v5x = 0\n",
+        "sum_for_v6x = 0\n",
+        "sum_for_v7x = 0\n",
+        "sum_for_v8x = 0\n",
+        "sum_for_v9x = 0\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v0x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[0]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v1x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[1]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v2x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[2]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v3x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[3]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v4x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[4]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v5x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[5]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v6x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[6]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v7x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[7]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v8x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[8]\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    sum_for_v9x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[9]\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OdsQMQPyM8FU",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -204,6 +314,75 @@
       "cell_type": "code",
       "metadata": {
         "id": "xxecL9pUo-_4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "euq7N-8frWNY",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.plot the training accuracy (%) at every iteration of gradient descent using the training data (blue)  & plot the testing accuracy (%) at every iteration of gradient descent using the testing data (red) / in one figure"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cMgVeYwlro7y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nQNs4PqErvs9",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3. print the final training accuracy (%) using the training data  & print the final testing accuracy (%) using the testing data "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0gF6sXiXt-ij",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DonVjW4ftyVX",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4. Plot the classification example(present 10 correctly classified testing images with their labels at the title of each sub-figure in 2x5 array &present 10 misclassified testing images with their misclassified labels at the title of each sub-figure in 2x5 array)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mSmOhtitt-9F",
         "colab_type": "code",
         "colab": {}
       },
