--- a/Assignment10.ipynb
+++ b/Assignment10.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOFX8egApN8q4oujAqv2QE7",
+      "authorship_tag": "ABX9TyOb5HYBPPrFbYZfVrlfIee5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "e0xaK1H5eClz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "file_data2   = \"/content/drive/My Drive/Colab Notebooks/mnist_2.csv\"\n",
+        "handle_file2 = open(file_data2, \"r\")\n",
+        "data2        = handle_file2.readlines()\n",
+        "handle_file2.close()\n",
+        "\n",
+        "size_row    = 28    # height of the image\n",
+        "size_col    = 28    # width of the image\n",
+        "\n",
+        "num_image2   = len(data2) #10,000개\n",
+        "count2       = 0     # count for the number of images\n",
+        "\n",
+        "#\n",
+        "# normalize the values of the input data to be [0, 1] 0~1 사이의 값으로 변환하기\n",
+        "#\n",
+        "\n",
+        "#\n",
+        "# make a matrix each column of which represents an images in a vector form\n",
+        "#\n",
+        "list_x2  = np.empty((size_row * size_col, num_image2), dtype=float) #각 이미지 데이터 벡터 리스트\n",
+        "list_label2  = np.empty(num_image2, dtype=int) #각 이미지 데이터의 레이블 리스트\n",
+        "\n",
+        "for line in data2:\n",
+        "\n",
+        "    line_data   = line.split(',')\n",
+        "    label2       = line_data[0]\n",
+        "    im_vector2   = np.asfarray(line_data[1:]) # 벡터 데이터 읽어오기 \n",
+        "    im_vector2   = normalize(im_vector2) # nomalize 시켜주기\n",
+        "\n",
+        "    list_label2[count2]       = label2\n",
+        "    list_x2[:, count2]    = im_vector2 #normailize시켜준 데이터벡터 리스트에 저장하기 \n",
+        "\n",
+        "    count2 += 1\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "HXmAzl_RfTHC",
         "colab_type": "code",
         "colab": {}
@@ -144,14 +188,7 @@
         "#print(u_matrix)  \n",
         "v_matrix = sigma * np.random.randn(10,197) + mu\n",
         "#print(v_matrix)\n",
-        "training_loss_List = []\n",
-        "testing_loss_List = []\n",
         "\n",
-        "training_accuracy_List = []\n",
-        "testing_accuracy_List = []\n",
-        "\n",
-        "training_total_Num = 1000\n",
-        "testing_total_Num = 9000\n",
         "\n",
         "h_list = []\n",
         "h_matrix = []\n",
@@ -168,55 +205,60 @@
         "yhat_temp = 0\n",
         "z_temp = 0\n",
         "h_temp = 0\n",
+        "count = 0\n",
+        "\n",
         "\n",
         " # iteration 하나당 데이터 하나 로드\n",
+        "\n",
         "for j in range(1000):\n",
-        "  x_temp = 0\n",
-        "  y_temp = 0\n",
-        "  yhat_temp = 0\n",
-        "  z_temp = 0\n",
-        "  h_temp = 0\n",
-        "  h_list.clear()\n",
-        "  z_list.clear()\n",
-        "  yhat_list.clear()\n",
-        "  y_list.clear()\n",
-        "  x_list.clear()\n",
+        "    x_temp = 0\n",
+        "    y_temp = 0\n",
+        "    yhat_temp = 0\n",
+        "    z_temp = 0\n",
+        "    h_temp = 0\n",
+        "    h_list.clear()\n",
+        "    z_list.clear()\n",
+        "    yhat_list.clear()\n",
+        "    y_list.clear()\n",
+        "    x_list.clear()\n",
         "  \n",
         "  # x_list 채우기 ( 785 x 1 )\n",
-        "  x_list.append(1) # bias 1로 채움 \n",
-        "  for i in range(784):\n",
-        "    x_temp = list_x[i][j]\n",
-        "    x_list.append(x_temp)\n",
+        "    x_list.append(1) # bias 1로 채움 \n",
+        "    for i in range(784):\n",
+        "      x_temp = list_x[i][j]\n",
+        "      x_list.append(x_temp)\n",
         "  \n",
         "  # y_list 채우기 = u_matrix * x_list  ( 196  x 1 ) + yhat_list 채우기\n",
-        "  for i in range(196):\n",
-        "    y_temp = 0\n",
-        "    for k in range(785):\n",
-        "      y_temp += u_matrix[i][k] * x_list[k]\n",
-        "    y_list.append(y_temp)\n",
+        "    for i in range(196):\n",
+        "      y_temp = 0\n",
+        "      for k in range(785):\n",
+        "        y_temp += u_matrix[i][k] * x_list[k]\n",
+        "      y_list.append(y_temp)\n",
         "  \n",
         "  # yhat_list 채우기 ( 197 x 1 )\n",
-        "  yhat_list.append(1) # bias 추가하기\n",
-        "  for i in range(196):\n",
-        "    yhat_temp = sigmoid(y_list[i])\n",
-        "    yhat_list.append(yhat_temp)\n",
-        "    yhat_list2.append(yhat_temp)\n",
+        "    yhat_list.append(1) # bias 추가하기\n",
+        "    for i in range(196):\n",
+        "      yhat_temp = sigmoid(y_list[i])\n",
+        "      yhat_list.append(yhat_temp)\n",
+        "      yhat_list2.append(yhat_temp)\n",
         "\n",
         "  #z_list 채우기 (10 x 1)\n",
-        "  for i in range(10):\n",
-        "    z_temp = 0\n",
-        "    for k in range(197):\n",
-        "      z_temp+= v_matrix[i][k] * yhat_list[k]\n",
-        "    z_list.append(z_temp)\n",
+        "    for i in range(10):\n",
+        "      z_temp = 0\n",
+        "      for k in range(197):\n",
+        "        z_temp+= v_matrix[i][k] * yhat_list[k]\n",
+        "      z_list.append(z_temp)\n",
         "\n",
         "  #h_list  채우기( 10 x 1 )\n",
-        "  for i in range(10):\n",
-        "    h_temp = sigmoid(z_list[i])\n",
-        "    h_list.append(h_temp)\n",
-        "  h_matrix.append(h_list)\n",
+        "    for i in range(10):\n",
+        "      h_temp = sigmoid(z_list[i])\n",
+        "      h_list.append(h_temp)\n",
+        "    h_matrix.append(h_list)\n",
         "\n",
-        "  \n",
-        " \n",
+        "    \n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": 0,
@@ -233,8 +275,6 @@
         "# NN ,Back propagation >> gradient descent / update parameter / \n",
         "# Objective function 정의  = Loss function  & 위에서의 각 iteration에서의 h를 이용해 testing_loss_List 채우기\n",
         "\n",
-        "LR = 0.1\n",
-        "\n",
         "sum_for_v0x = 0\n",
         "sum_for_v1x = 0\n",
         "sum_for_v2x = 0\n",
@@ -246,45 +286,141 @@
         "sum_for_v8x = 0\n",
         "sum_for_v9x = 0\n",
         "\n",
+        " \n",
+        "# Gradient Descent 위한 summation 구현\n",
+        "for k in range(10):\n",
+        "    sum_for_v0x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[0]\n",
+        "    sum_for_v1x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[1]\n",
+        "    sum_for_v2x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[2]\n",
+        "    sum_for_v3x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[3]\n",
+        "    sum_for_v4x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[4]\n",
+        "    sum_for_v5x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[5]\n",
+        "    sum_for_v6x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[6]\n",
+        "    sum_for_v7x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[7]\n",
+        "    sum_for_v8x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[8]\n",
+        "    sum_for_v9x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[9]\n",
+        "  \n",
+        "#v_matrix 갱신\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v0x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[0]\n",
+        "    sum_for_v0x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[0]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v1x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[1]\n",
+        "    sum_for_v1x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[1]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v2x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[2]\n",
+        "    sum_for_v2x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[2]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v3x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[3]\n",
+        "    sum_for_v3x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[3]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v4x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[4]\n",
+        "    sum_for_v4x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[4]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v5x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[5]\n",
+        "    sum_for_v5x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[5]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v6x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[6]\n",
+        "    sum_for_v6x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[6]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v7x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[7]\n",
+        "    sum_for_v7x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[7]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v8x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[8]\n",
+        "    sum_for_v8x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[8]\n",
         "\n",
         "for i in range(1000):\n",
         "  for k in range(10):\n",
-        "    sum_for_v9x += -list_label[i]*(1 - h_matrix[i][k])*yhat_list2[9]\n",
+        "    sum_for_v9x += -list_label[j]*(1 - h_matrix[j][k])*yhat_list2[9]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p39yJg7tNmE6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for j in range(10):\n",
+        "  if (j == 0):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v0x\n",
+        "  if (j == 1):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v1x\n",
+        "  if (j == 2):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v2x\n",
+        "  if (j == 3):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v3x\n",
+        "  if (j == 4):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v4x\n",
+        "  if (j == 5):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v5x\n",
+        "  if (j == 6):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v6x\n",
+        "  if (j == 7):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v7x\n",
+        "  if (j == 8):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v8x\n",
+        "  if (j == 9):\n",
+        "    for i in range(197):\n",
+        "      v_matrix[j][i] = v_matrix[j][i] - LR/1000 *sum_for_v9x\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pNEamzACZrmh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#objective function 구현\n",
+        "training_loss_List = []\n",
+        "testing_loss_List = []\n",
+        "\n",
+        "training_accuracy_List = []\n",
+        "testing_accuracy_List = []\n",
+        "\n",
+        "training_total_Num = 1000\n",
+        "testing_total_Num = 9000\n",
+        "\n",
+        "training_loss = 0\n",
+        "\n",
+        "\n",
+        "for i in range(1000):\n",
+        "  for k in range(10):\n",
+        "    training_loss += -label_List[i] * math.log(h_matrix[i][k]) - (1 - label_List[i]) * math.log(1-h_matrix[i][k])\n",
+        "  training_accuracy_List.append(training_loss)\n",
+        "\n",
+        "for i in range(9000):\n",
+        "  for k in range(10):\n",
+        "    testing_loss += -label_List[i] * math.log(h_matrix[i][k]) - (1 - label_List[i]) * math.log(1-h_matrix[i][k])\n",
+        "  testing_accuracy_List.append(testing_loss)\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": 0,
